[gd_scene load_steps=8 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://huruf/C&C Red Alert [INET].ttf" type="DynamicFontData" id=2]
[ext_resource path="res://sound/button.wav" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.3125, 0.305176, 0.305176, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 1, 1, 1 )
corner_detail = 18

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -77.5
margin_right = 77.5
margin_bottom = 93.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="PesanLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -51.0
margin_right = 250.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 2 )
text = "Hindari Benda jatuh!"
align = 1
valign = 1

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -97.0
margin_top = 123.0
margin_right = 97.0
margin_bottom = 200.0
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "Mulai"

[node name="SoundButton" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -8.0
[connection signal="start_game" from="." to="." method="_on_HUD_start_game"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
